# CompareFaces

./: .gitignore  README.md  config.py  face_detection.py  feature_extraction.py  gui.py  main.py  ml_integration.py  pyproject.toml  similarity_analysis.py
docs/source/: conf.py
docs/source/api/: FaceCompare.chatgpt_api_integration.rst  FaceCompare.config.rst  FaceCompare.docs.rst  FaceCompare.docs.source.conf.rst  FaceCompare.docs.source.rst  FaceCompare.face_detection.rst  FaceCompare.feature_extraction.rst  FaceCompare.gui.rst  FaceCompare.main.rst  FaceCompare.rst  FaceCompare.similarity_analysis.rst  modules.rst
